update jdk to 21 default GC to ZGC